--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [flake8]
 ignore = D203,W605,E501,W503,E203,C901
-exclude = .git,__pycache__,docs/source/conf.py,old,build,dist,.venv,env
+exclude = .git,__pycache__,docs/source/conf.py,old,build,dist,.venv,env,deep-learning-from-scratch-4
 max-complexity = 10
 max-line-length = 99
 
